--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 html,
+body {
+	min-height: 100%;
+	height: 100%;
+}
+
+html,
 body,
 div {
 	margin: 0px;
@@ -6,19 +12,24 @@ div {
 	background-color: #111;
 }
 
-#story {
-	width: 300px;
-	height: auto;
+.top-interface {
+	width: 100%;
+	height: 30%;
 	background-color: #333;	
 	float: left;
 	position: relative;
 	display: inline-block;
 }
 
+#story {
+	color: #DEDEDE;
+	background-color: #222;	
+}
+
 #RotDisplay {
 	width: 100%;
-	height: auto;
-	background-color: #222;
+	height: 70%;
+	background-color: #000;
 	float: left;
 	position: relative;
 	display: inline-block;
