--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html,
 body {
 	min-height: 100%;
 	height: 100%;
-	-webkit-text-stroke: 0.25px /* fix ugly chrome fonts */
+	-webkit-text-stroke: 0.25px /* hack to fix ugly chrome fonts */
 }
 
 html,
@@ -17,9 +17,9 @@ div {
 	background-color: #111;
 }
 
-.top-interface {
-	width: 100%;
-	height: 40%;
+.interface {
+	width: 30%;
+	height: 100%;
 	background-color: #333;	
 	float: left;
 	position: relative;
@@ -48,7 +48,7 @@ div {
 #poem ul {
 	display: inline-block;
 	margin: 0px 20px 20px 0px;
-	border: 1px #333 dotted;
+	/* border: 1px #333 dotted; */
 	min-width: 250px;
 	padding:10px;
 }
@@ -76,10 +76,22 @@ div {
 }
 
 #RotDisplay {
-	width: 100%;
-	height: 60%;
+	width: 70%;
+	height: 100%;
 	background-color: #000;
 	float: left;
 	position: relative;
 	display: inline-block;
+}
+
+@media only screen and (max-width: 480px) {
+	.interface {
+		width: 100%;
+		height: 40%;
+	}
+	
+	#RotDisplay {
+		width: 100%;
+		height: 60%;
+	}
 }
