--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,25 @@ div {
 }
 
 .interface {
-	width: 30%;
+	width: 300px;
 	height: 100%;
 	background-color: #333;	
 	float: left;
 	position: relative;
 	display: inline-block;
 	overflow-y: auto;
+	overflow-x: hidden;
+	
+	background: #333;
+	background: -moz-linear-gradient(left, #333 0%, #000 100%);
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#333), color-stop(100%,#000));
+	background: -webkit-linear-gradient(left, #333 0%,#000 100%);
+	background: -o-linear-gradient(left, #333 0%,#000 100%);
+	background: -ms-linear-gradient(left, #333 0%,#000 100%);
+	background: linear-gradient(to right, #333 0%,#000 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333', endColorstr='#000',GradientType=1 );
 }
+
 
 #logo {
 	padding:10px 20px;
@@ -35,6 +46,23 @@ div {
 	font-family: 'UnifrakturCook', cursive;
 	font-size: 32px;
 	border-bottom: 2px #666 solid;
+}
+
+#RotDisplay {
+	margin-left:300px;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	position: fixed;
+	display: block;
+}
+
+#logo {
+	display: none;
+}
+
+#poem {
+	display: none;
 }
 
 #poem {
@@ -75,23 +103,26 @@ div {
 	margin: 10px;
 }
 
-#RotDisplay {
-	width: 70%;
-	height: 100%;
-	background-color: #000;
-	float: left;
-	position: relative;
-	display: inline-block;
-}
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
 	.interface {
 		width: 100%;
 		height: 40%;
+		
+		background: #333333;
+		background: -moz-linear-gradient(top,  #333333 0%, #000000 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#333333), color-stop(100%,#000000));
+		background: -webkit-linear-gradient(top,  #333333 0%,#000000 100%);
+		background: -o-linear-gradient(top,  #333333 0%,#000000 100%);
+		background: -ms-linear-gradient(top,  #333333 0%,#000000 100%);
+		background: linear-gradient(to bottom,  #333333 0%,#000000 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#000000',GradientType=0 );
 	}
 	
 	#RotDisplay {
-		width: 100%;
+		margin-left:0px;
 		height: 60%;
+		position: relative;
+		display: inline-block;
 	}
 }
