--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ div {
 }
 
 .interface {
-	width: 300px;
+	width: 260px;
 	height: 100%;
 	background-color: #333;	
 	float: left;
@@ -36,7 +36,7 @@ div {
 	overflow-y: auto;
 	overflow-x: hidden;
 	
-	border-right: 2px #aaa solid;
+	border-right: 1px #111 solid;
 	border-bottom: 0px;
 	margin-right:2px;
 	
@@ -58,8 +58,8 @@ div {
 	text-align: left;
 	color: #DEDEDE;
 	font-family: 'Droid Sans Mono', sans-serif;
-	font-size: 14px;
-	padding: 10px 20px;
+	font-size: 15px;
+	padding: 10px 10px;
 }
 
 
@@ -74,11 +74,11 @@ div {
 }
 
 #RotDisplay {
-	margin-left:300px;
-	width: -moz-calc(100% - 300px);
-	width: -webkit-calc(100% - 300px);
-	width: -o-calc(100% - 300px);
-	width: calc(100% - 300px);
+	margin-left:260px;
+	width: -moz-calc(100% - 260px);
+	width: -webkit-calc(100% - 260px);
+	width: -o-calc(100% - 260px);
+	width: calc(100% - 260px);
 	height: 100%;
 	background-color: #000;
 	position: fixed;
@@ -138,7 +138,7 @@ div {
 		width: 100%;
 		height: 40%;
 		border-right: 0px;
-		border-bottom: 2px #aaa solid;
+		border-bottom: 1px #111 solid;
 		margin-right: 0px;
 		
 		background: #333333;
