--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,12 @@ div {
 	overflow-y: auto;
 	overflow-x: hidden;
 	
-	border-right: 1px #111 solid;
+	/* border-right: 1px #111 solid; */
 	border-bottom: 0px;
 	margin-right:2px;
 	
+	background: #000;
+	/* 
 	background: #333;
 	background: -moz-linear-gradient(left, #333 0%, #000 100%);
 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#333), color-stop(100%,#000));
@@ -47,7 +49,7 @@ div {
 	background: -o-linear-gradient(left, #333 0%,#000 100%);
 	background: -ms-linear-gradient(left, #333 0%,#000 100%);
 	background: linear-gradient(to right, #333 0%,#000 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333', endColorstr='#000',GradientType=1 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333', endColorstr='#000',GradientType=1 ); */
 }
 
 #story, 
@@ -59,7 +61,28 @@ div {
 	color: #DEDEDE;
 	font-family: 'Droid Sans Mono', sans-serif;
 	font-size: 15px;
-	padding: 10px 10px;
+	padding: 8px 15px 15px 15px;
+	margin: 4px 5px;
+	background-color: rgba(34,34,34,0.125);
+	border: 1px rgba(34,34,34,0.75) solid;
+	margin-bottom: 0px;
+}
+
+.condition {
+	margin-left: 1.8em;
+} 
+
+.interface #key,
+.interface #status {
+	margin-top: -1px;
+}
+
+#story, 
+#tasks, 
+#stats,
+#key,
+#status {
+	display: none;
 }
 
 
